gitea/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.13.0
        ports:
          - name: http
            containerPort: 3000
          - name: ssh
            containerPort: 22
        livenessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-data
