gitea/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
spec:
  tls:
    - secretName: gitea-cert
      hosts:
        - gitea.example.com
  rules:
    - host: gitea.example.com
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  name: http
            path: /
            pathType: Prefix
